test/compile_errors/err_c_void_value_decl.w
//! expect-check-fail: cannot create value of opaque type; use a pointer or reference

fn main:
    var value: c_void
